commit all changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-pandas
-numpy
-seaborn
-scipy
+numpy==1.23.5
+pandas==2.2.2
+seaborn==0.12.2
+scipy==1.14.0
+scikit-learn==1.2.2
+lightgbm==3.3.5
+catboost==1.1.1
+xgboost==1.7.6
 -e .
