--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-numpy==1.23.5
+Flask==2.2.2
 pandas==2.2.2
-seaborn==0.12.2
-scipy==1.14.0
+numpy==1.23.5
 scikit-learn==1.2.2
+scipy==1.14.0
 lightgbm==3.3.5
 catboost==1.1.1
 xgboost==1.7.6
-dill
-flask
--e .
+seaborn==0.12.2
+dill==0.3.7
+flask-cors==3.0.10
+# -e .
